--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Hisfantor</title>
     <link rel="shortcut icon" href="snoo.ico">
   </head>
-  <body>
+  <body style="background-color:#2b3338">
     <div style="margin:auto;margin-top:200px;width:600px;box-shadow: 0 2px 2px rgba(136,153,166,0.3);height:350px;border:solid grey 2px;"><span style="width:100%;display:inline-block;text-align:center;font-family:Helvetica;font-size:80px;line-height:350px;color:rgba(196, 90, 44, 0.8);text-decoration: underline;">Hisfantor</span></div>
 
 <ul>
