--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <html>
-  <head>
-    <title>Hisfantor</title>
-    <link rel="shortcut icon" href="snoo.ico">
-  </head>
-  <body style="background-color:#2b3338">
-    <div style="margin:auto;margin-top:200px;width:600px;box-shadow: 0 2px 2px rgba(136,153,166,0.3);height:350px;border:solid grey 2px;"><span style="width:100%;display:inline-block;text-align:center;font-family:Helvetica;font-size:80px;line-height:350px;color:rgba(196, 90, 44, 0.8);text-decoration: underline;">Hisfantor</span></div>
-
-<ul>
-	<li><a href="/test/">test project</a></li>
-	<li><a href="/got-podcasts/">got-podcasts</a></li>
-</ul>
-  </body>
+  	<head>
+    		<title>Hisfantor</title>
+     		<link rel="shortcut icon" href="snoo.ico">
+		<link rel="stylesheet" href="style.css">  
+	</head>
+  	<body>
+    		<div><span>Hisfantor</span></div>
+		<h3>Projects:</h3>
+		<ul>
+			<li><a href="/test/">test project</a></li>
+			<li><a href="/got-podcasts/">got-podcasts</a></li>
+			<li><a href="/blog/">blog</a></li>
+		</ul>
+  	</body>
 </html>
