--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<ul>
 			<li><a href="/test/">test project</a></li>
 			<li><a href="/got-podcasts/">got-podcasts</a></li>
-			<li><a href="/blog/">blog</a></li>
+			<li><a href="/hugo/">hugo</a></li>
 		</ul>
   	</body>
 </html>
