--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<li><a href="/test/">test project</a></li>
 			<li><a href="/got-podcasts/">got-podcasts</a></li>
 			<li><a href="/hugo/">hugo</a></li>
+			<li><a href="/jekyll/">jekyll</a></li>
 		</ul>
   	</body>
 </html>
