--- a/index.html
+++ b/index.html
@@ -1,16 +1,261 @@
-<html>
-  	<head>
-    		<title>Hisfantor</title>
-     		<link rel="shortcut icon" href="snoo.ico">
-		<link rel="stylesheet" href="style.css">  
-	</head>
-  	<body>
-    		<div><span>Hisfantor</span></div>
-		<h3>Projects:</h3>
-		<ul>
-			<li><a href="/test/">test project</a></li>
-			<li><a href="/got-podcasts/">got-podcasts</a></li>
-			<li><a href="/blog/">Blog</a></li>
-		</ul>
-  	</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+	<meta charset="utf-8">
+	<meta name="p:domain_verify" content="d29788a4ca9610493c561297c0ae83b6"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="title" content="Hisfantor">
+	<meta name="description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff.">
+	<meta name="robots" charset="index,follow">
+
+	<meta property="og:type" content="article" /> 
+	<meta property="og:title" content="Hisfantor.com" />
+	<meta property="og:description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff." />
+	<meta property="og:image" content="img/pagescreenshot.png" />
+	<meta property="og:url" content="https://www.Hisfantor.com" />
+	<meta property="og:site_name" content="Hisfantor.com" />
+
+	<meta name="twitter:title" content="Hisfantor.com">
+	<meta name="twitter:description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff.">
+	<meta name="twitter:image" content="img/pagescreenshot.png">
+	<meta name="twitter:site" content="@hisfantor">
+	<meta name="twitter:creator" content="@hisfantor">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+	<title>Hisfantor</title>
+	<link rel="shortcut icon" href="icons/snoo.ico">
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=PT+Serif+Caption|Roboto|Roboto+Mono&display=swap" rel="stylesheet">
+</head>
+<body>
+	<main>
+		<header>
+			<div id="T-top">
+				<h1>Hisfantor</h1>
+			</div>
+			<div id="H-middle">
+				<p>
+					<span>About:</span> I'm Niclas from Germany. 20 years old studying mechanical engineering and trying to create in my
+					free time. Here you'll find an overview of my projects past and present. It's all over the place 
+					in terms of interests and subjects. Things I'm interested in include: tech, engineering, cooking, movies, 
+					video games, mechanical keyboards, cars, furniture, Linux and much more
+				</p>
+			</div>
+			<div id="H-left">
+				<img src="img/logo.png" alt="the Hisfantor Logo">
+				<nav>
+
+					<a href="#studentcooking">studentcooking</a>
+					<a href="#blog">blog</a>
+					<a href="#lowercase_games">lowercase_games</a>
+					<a href="#lists">tables & lists</a>
+					<a href="#mk">meckanical keyboards</a>
+					<!--a href="#reddit">reddit</a-->
+				</nav>
+			</div>
+			<div class="T-bottom">
+				<a id="linksbutton">Social Media / Links</a>
+				<div class="links">
+					<a href="https://twitter.com/Hisfantor" title="twitter"><img src="icons/twitter.png" alt="twitter icon"></a>
+					<a href="https://www.reddit.com/user/Hisfantor/" title="reddit"><img src="icons/reddit.png" alt="reddit icon"></a>
+					<a href="https://www.youtube.com/channel/UCiAWzIGCRPy-RWoG-MN3Eug" title="youtube"><img src="icons/youtube.png"></a>
+					<a href="https://imgur.com/user/hisfantor/posts" title="imgur"><img src="icons/imgur.png" alt="imgur icon"></a>
+					<a href="https://codepen.io/Hisfantor/" title="codepen"><img src="icons/codepen.png" alt="codepen icon"></a>
+					<a href="https://github.com/Hisfantor" title="github"><img src="icons/github.png" alt="github icon"></a>
+					<a href="https://www.pinterest.de/hisfantor/" title="pinterest"><img src="icons/pinterest.png" alt="pinterest icon"></a>
+					<a href="https://hisfantor.deviantart.com/" title="deviantart"><img src="icons/deviantart.png" alt="deviantart icon"></a>
+					<a href="https://www.instagram.com/Hisfantor/" title="Instagram"><img src="icons/instagram.png" alt="instagram icon"></a>
+					<a href="https://open.spotify.com/user/11161083712?si=r2xs7jkNTZuKiaLAb4y_jg" title="spotify"><img src="icons/spotify.png" alt="spotify icon"></a>
+					<a href="https://www.rottentomatoes.com/user/id/976681227" title="rottentomatoes"><img src="icons/tomato.png" alt="rottentomatoes icon"></a>
+					<a href="https://www.flickr.com/photos/hisfantor/" title="flickr"><img src="icons/flickr.png" alt="flickr icon"></a>
+					<br>Telegram: @Hisfantor
+					<br>Discord: Hisfantor#1945
+				</div>
+			</div>
+			<div id="H-right">
+				<p>
+					&#8681; scroll down for more &#8681;
+				</p>
+			</div>
+		</header>
+		<section>
+			<article id="studentcooking">
+				<h2>Studentcooking</h2>
+
+				<div class="description">
+					Since I'm really into cooking I wanted to share my passion. As a student, I don't have a big kitchen, all
+					the tools or a big budget. So my plan is to share that it's possible anyway, to cook a wide variety 
+					of simple and healthy meals for yourself. It' not even as hard as many might think.
+					So I created an <a href="www.instagram.com/hft_studentcooking" title="hft_studentcooking instagram">Instagram</a> where I post the meals as soon as
+					they are cooked. In addition to that I set up a hugo blog on <a href="/studentcooking" title="my studentcooking blog">here</a>
+					where you can find some of the "recipees" I have cooked. I keep the instructions as minimal as possible since I believe that you learn the most by trying yourself.
+				</div>
+				<div class="gallery">
+					<a href="/studentcooking" title="my studentcooking blog"><img src="img/studentcooking/wide1.png" alt="stundetcooking website screenshot"></a>
+					<a href="/studentcooking" title="my studentcooking blog"><img src="img/studentcooking/mobile.jpg" alt="student cooking mobile website screenshot"></a>
+					<a href="www.instagram.com/hft_studentcooking" title="hft_studentcooking instagram"><img src="img/studentcooking/insta.png" alt="studentcooking instagram screenshot"></a>
+				</div>
+			</article>
+			<article id="blog">
+			<h2>Blog</h2>
+			<div class="description">
+				Another playground for my web design hobby is <a href="http://hisfantor.com/blog/" title="hisfantor.com/blog">my blog</a>, where I try new stuff and test ideas. It is the same
+				as studentcooking a static site generator, but this time run by jekyll. But other than the web design aspect I try to collect 
+				useful information there. I wrote some guieds or just general write-ups of things that I have worked on regarding Linus, Keyboards
+				and so on. My idea is, if I have figured out something, then the next person doesn't have to do it, if I document the process well.
+				In addition to my own posts I started integrating guest posts about the same topics. 
+				Since it's pretty easy to write markdown it could help to share some useful information in my opinion.
+			</div>
+			<div class="gallery">
+
+			</div>
+		</article>
+			<article id="lowercase_games">
+				<h2>lowercase_games</h2>
+				<div class="description">
+					Between 2016 and 2018 I worked on a couple of games with the lowercase_games team which I co-created. 
+					I was responsible for game design, Linux versions and organisation within the team and our social media channels.
+					We made all our games for game jams, which was a great experience since we had a given theme for the game and a limited time (which was 72h for the last 3 games).
+					<h3><a href="https://lowercase-games.itch.io/metamorph" title="Metamorph game page/download">Metamorph:</a></h3>
+					This retro looking game which is played on a command line might look simple, but has a trick to it.
+					It's a boss monster marathon where the boss evolves based on the methods you killed him last time,
+					which makes him basically unkillable a few levels in.
+					<h3><a href="https://lowercase-games.itch.io/im-no-shut-in" title="im-no-shut-in game page/download">I'm no shut-in:</a></h3>
+					Here we have a story based point and click adventure which can be finished in about 15min.
+					It tells a compelling tale of a young man and his room. Also our famous mascot the flamingo
+					will be introduced for the first time.
+					<h3><a href="https://lowercase-games.itch.io/dipsomaniac" title="dipsomaniac game page/download">Dipsomaniac:</a></h3>
+					A side-scroller that simulates being drunk, telling a fun story. The gameplay gets harder the more
+					you drink, but the end... well you'll see
+					<h3><a href="https://lowercase-games.itch.io/rose-coloured-dungeon-life" title="rose-coloured-dungeon-life game page/download">Rose-Coloured Dungeon Life:</a></h3>
+					This dungeon full of mythical monsters is not the easiest to master. You'll encounter 4 different monsters
+					which are so lovely that you might fall for them and fight off the humans. Depending on your answers, you can 
+					achieve a variety of different endings.
+				</div>
+				<div class="gallery">
+					<a href="https://lowercase-games.itch.io/rose-coloured-dungeon-life" title="rose-coloured-dungeon-life game page/download"><img src="img/lowercase_games/rcdl.gif" alt="Rose-Coloured Dungeon Life game screenshot"></a>
+					<a href="https://lowercase-games.itch.io/dipsomaniac" title="dipsomaniac game page/download"><img src="img/lowercase_games/dipso.png" alt="Dipsomaniac game screenshot"></a>
+					<a href="https://www.designbyhumans.com/shop/Hisfantor/" title="lowercase games merch store"><img src="img/lowercase_games/merch.png" alt="designbyhumans lowercase games merch store screenshot"></a>
+					<a href="https://lowercase-games.itch.io/im-no-shut-in" title="im-no-shut-in game page/download"><img src="img/lowercase_games/imno.png" alt="I'm no shut-in game screenshot"></a>
+					<a href="https://twitter.com/lowercase_games" title="lowercase games twitter"><img src="img/lowercase_games/twitter.png" alt="lowercase games twitter screenshot"></a>
+					<a href="https://lowercase-games.itch.io/metamorph" title="Metamorph game page/download"><img src="img/lowercase_games/meta.png" alt="Metamorph game screenshot"></a>
+				</div>
+			</article>
+			<article id="lists">
+				<h2>Lists and Tables</h2>
+				<div class="description">	
+					One of my strange quirks that I'm really into is making lists, but not like a shopping list like normal 
+					people. I like to visualize or combine information for projects that I am working on, general things 
+					I'm interested in and especially for buying decisions. 
+					Most of the time are these lists not useful for anyone else then myself,
+					but I enjoy making and maybe someone else might get some use out of them.
+				</div><div id="listgallery">
+					<h3><a href="https://www.youtube.com/channel/UCiAWzIGCRPy-RWoG-MN3Eug/playlists?view=1&sort=dd&shelf_id=0" title="all my youtube playlists">youtube playlists:</a></h3>
+					<ul>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqG96ZqUi88xYEYhlqiiIKn_">Furniture and Architecture</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqGv3r7Mjaslyfk-13II_rVa">cooking</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqFP3XdABZMekGncAMizy28z">cars</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqGcvmzyYZ0Ywqrq_TbMbgOl">abandoned cars</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqErepkC83jByJwpQuz-v8Tg">Mechanical Keyboards</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqGjllU7tcX5tf5Tk62ChO8D">building stuff</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqFuWH_IyCPunx34ft9_6h1Z">2d analog art</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqEd1W5YVge5Pt387o7ygTC1">movie magic</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqGKKGckbpkCPI78o2XLR25r">short films</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqFGj4h34c4YugEy6FyHTzMQ">linux</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLIYQVfrGBOqE-3alm_DFTzmxkLu_z1tv3">music</a></li>
+					</ul>
+					<h3><a href="https://www.reddit.com/user/Hisfantor/" title="all my reddit multireddits">multireddits:</a></h3>
+					<ul>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/architecture/">architecture</a></li>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/food/">food</a></li>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/cars/">cars</a></li>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/mk/">mk</a></li>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/design/">design</a></li>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/diy/">diy</a></li>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/art/">art</a></li>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/got/">got</a></li>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/photos/">photos</a></li>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/linux/">linux</a></li>
+						<li><a href="https://www.reddit.com/user/Hisfantor/m/programming/">programming</a></li>
+					</ul>
+					<h3><a href="https://www.pinterest.de/hisfantor/" title="all my pinterest boards">pinterest boards:</a></h3>
+					<ul>
+						<li><a href="https://www.pinterest.de/hisfantor/furniture-and-stuff/">furniture and stuff</a></li>
+						<li><a href="https://www.pinterest.de/hisfantor/knives/">knives</a></li>
+						<li><a href="https://www.pinterest.de/hisfantor/cars/">cars</a></li>
+						<li><a href="https://www.pinterest.de/hisfantor/bikes/">bikes</a></li>
+						<li><a href="https://www.pinterest.de/hisfantor/design/">design</a></li>
+					</ul>
+					<h3><a href="https://drive.google.com/drive/folders/1xI8iynguygnj68VXIFvPGO69S_I5gBM8?usp=sharing" title="all my google sheets">google sheets:</a></h3>
+					<ul>
+						<li><a href="https://docs.google.com/spreadsheets/d/1lpB4q2J7r8FBP4owRVPLULzROHx_TWtFWS1DhteCxxU/edit?usp=sharing">Top Boardgame Lists from different Youtubers</a></li>
+						<li><a href="https://docs.google.com/spreadsheets/d/1IO-VZkr8b7PyXXdXp65yHm7shezQPWpFe8eej-DxcfQ/edit?usp=sharing">Game of Thrones Podcasts</a></li>
+						<li><a href="https://docs.google.com/spreadsheets/d/1bdO_b1hWdor8UXP_Kv587AznGdAoK1h_diq2PEEe7aA/edit?usp=sharing">WS2812B LED Strips</a></li>
+						<li><a href="https://docs.google.com/spreadsheets/d/1lMzMFcZWxDm66tmHTA5YdXpLdJc_F4oSAG96ePnnx1M/edit?usp=sharing">new Boardgames</a></li>
+					</ul>
+				</div>
+				<div class="gallery">
+					<iframe id="iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTjEfm-VV6Xy6i35mwfO94e9q3LmhtVZPH28LbrGWT4PeINa6by9ssG6vvf35zYlXFkM_PUbCvdvGPO/pubhtml?gid=0&single=true"></iframe>
+				</div>
+			</article>
+			<article id="mk">
+				<h2>Mechanical Keyboards</h2>
+				<div class="description">
+				On the 24.8.2016 started my journey down the rabbit hole which is r/MechanicalKeyboard.
+				I posted a layout idea of an 40% layout with additional numpad. If you follow the comment thread <a href="https://old.reddit.com/r/MechanicalKeyboards/comments/4zdnpk/an_idea_of_a_40_board_with_numpad/" title="reddit post about my first keyboard design">here</a>
+				you'll witness how a reddit user in the states was so intrigued by my design that within hours of my post he laser cut 
+				the plate and case and built up a prototype which arrived a few weeks later at my home and became my first mk. <br> 
+				The second one I built was the famous planck which I outfitted with a USB hub so I can add a mouse dongle and a micro SD card
+				to plug it all in my phone. After r/place in 2017 I created an homage to the blue corner which got much love from the community.
+				Since I was so in love with these small keyboards I created a roundup of the most common 40% layouts, which has been
+				used for keycap reference. I'm still working on keyboards, writing up information and building new boards as I go.
+			</div>
+			<div class="gallery">
+				<img src="https://i.imgur.com/OuWnqxQ.jpg" alt="r/place mechanical keyboard">
+				<img src="https://i.imgur.com/U2vcaJp.jpg" alt="40num+ first prototype mechanical keyboard">
+				<img src="https://i.imgur.com/K5ZM3Vo.jpg" alt="40num+ layouts">
+				<img src="https://i.imgur.com/8uL15Pt.png" alt="most common 40% keyboard layouts">
+			</div>
+		</article>
+		
+		<!--article id="reddit">
+			<h2>reddit</h2>
+			<div class="description">
+				Now this is a somewhat strange thing to write about in my portfolio since reddit is "just a website". 
+				But in the past 5 years of using reddit I got introduced to so many new things, new hobbies and people and such a great part of the internet.
+				I fell in love with the old school internet like design, which makes the entry for newcomers that little more complicated, so the nerds can stay within their realms.
+				There is so much to love about reddit, the posts aren't about the people, it's about the content and as soon as
+				you adjust your front page you get a feed of all the stuff you love. But if you are there for the people, if you 
+				are seeking the interaction you surely can and I had nothing than great experiences in the comments and DMs. <br>
+				discussins about keyboard layouts, programming and some quirky Linux features. <br>
+				To be honest, I just got into Linux because I fell in love with the beauty of r/unixporn. <br>
+				r/DataHorder got me into RAID and NAS-solutions which led to my now giant mountain of movies(rip r/megalinks). <br>
+				Subreddits about the current tv shows which provide all the memes. <br>
+				Inspiration in all fields from art to diy and some of my favorite things to look at knives, watches and of course mechanical keyboards. <br>
+				I get great trades on the mechmarket or secret santa.<br>
+				I moderate some subreddits myself and play around with the custom css. <br> 
+				I even made it to the front page once with the gif I created of the battle bots trophy. <br>
+				At last I want to mention the companion cube which I built on r/place which was one of the greatest internet experiences for me. 
+			</div>
+			<div class="gallery">
+				<img src="https://i.imgur.com/L1bIcrm.gif" alt="the gif that brought me to the front page of reddit">
+				<img src="img/cube.png" alt="r/place companion cube I've built">
+			</div>
+		</article-->
+	</section>
+	<footer>
+			<a href="https://twitter.com/Hisfantor" title="twitter">twitter </a>
+			<a href="https://www.reddit.com/user/Hisfantor/" title="reddit">reddit </a>
+			<a href="https://www.instagram.com/Hisfantor/" title="Instagram">instagram</a>
+			<br><a href = "mailto:niclas@hisfantor.com">niclas@hisfantor.com</a>
+			<br>Telegram: @Hisfantor
+			<br>Discord: Hisfantor#1945
+			<br><a href="icons.html">icons cc links</a>
+	</footer>
+</main>
+<a href="#" id="scroll" title="back to top"><span></span></a>
+
+</body>
 </html>
+
