--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div class="links">
 					<a href="https://twitter.com/Hisfantor" title="twitter"><img src="icons/twitter.png" alt="twitter icon"></a>
 					<a href="https://www.reddit.com/user/Hisfantor/" title="reddit"><img src="icons/reddit.png" alt="reddit icon"></a>
-					<a href="https://www.youtube.com/channel/UCiAWzIGCRPy-RWoG-MN3Eug" title="youtube"><img src="icons/youtube.png"></a>
+					<a href="https://www.youtube.com/channel/UCiAWzIGCRPy-RWoG-MN3Eug" title="youtube"><img src="icons/youtube.png" alt="youtube icon"></a>
 					<a href="https://imgur.com/user/hisfantor/posts" title="imgur"><img src="icons/imgur.png" alt="imgur icon"></a>
 					<a href="https://codepen.io/Hisfantor/" title="codepen"><img src="icons/codepen.png" alt="codepen icon"></a>
 					<a href="https://github.com/Hisfantor" title="github"><img src="icons/github.png" alt="github icon"></a>
@@ -86,15 +86,15 @@
 				<div class="description">
 					Since I'm really into cooking I wanted to share my passion. As a student, I don't have a big kitchen, all
 					the tools or a big budget. So my plan is to share that it's possible anyway, to cook a wide variety 
-					of simple and healthy meals for yourself. It' not even as hard as many might think.
-					So I created an <a href="www.instagram.com/hft_studentcooking" title="hft_studentcooking instagram">Instagram</a> where I post the meals as soon as
+					of simple and healthy meals for yourself. It's not even as hard as many might think.
+					So I created an <a href="https://www.instagram.com/hft_studentcooking" title="hft_studentcooking instagram">Instagram</a> where I post the meals as soon as
 					they are cooked. In addition to that I set up a hugo blog on <a href="/studentcooking" title="my studentcooking blog">here</a>
 					where you can find some of the "recipees" I have cooked. I keep the instructions as minimal as possible since I believe that you learn the most by trying yourself.
 				</div>
 				<div class="gallery">
-					<a href="/studentcooking" title="my studentcooking blog"><img src="img/studentcooking/wide1.png" alt="stundetcooking website screenshot"></a>
-					<a href="/studentcooking" title="my studentcooking blog"><img src="img/studentcooking/mobile.jpg" alt="student cooking mobile website screenshot"></a>
-					<a href="www.instagram.com/hft_studentcooking" title="hft_studentcooking instagram"><img src="img/studentcooking/insta.png" alt="studentcooking instagram screenshot"></a>
+					<a href="/studentcooking" title="my studentcooking blog"><img src="img/studentcooking/wide1.WebP" alt="stundetcooking website screenshot"></a>
+					<a href="/studentcooking" title="my studentcooking blog"><img src="img/studentcooking/mobile.WebP" alt="student cooking mobile website screenshot"></a>
+					<a href="https://www.instagram.com/hft_studentcooking" title="hft_studentcooking instagram"><img src="img/studentcooking/insta.WebP" alt="studentcooking instagram screenshot"></a>
 				</div>
 			</article>
 			<article id="blog">
@@ -102,7 +102,7 @@
 			<div class="description">
 				Another playground for my web design hobby is <a href="http://hisfantor.com/blog/" title="hisfantor.com/blog">my blog</a>, where I try new stuff and test ideas. It is the same
 				as studentcooking a static site generator, but this time run by jekyll. But other than the web design aspect I try to collect 
-				useful information there. I wrote some guieds or just general write-ups of things that I have worked on regarding Linus, Keyboards
+				useful information there. I wrote some guides or just general write-ups of things that I have worked on regarding Linus, Keyboards
 				and so on. My idea is, if I have figured out something, then the next person doesn't have to do it, if I document the process well.
 				In addition to my own posts I started integrating guest posts about the same topics. 
 				Since it's pretty easy to write markdown it could help to share some useful information in my opinion.
@@ -135,11 +135,11 @@
 				</div>
 				<div class="gallery">
 					<a href="https://lowercase-games.itch.io/rose-coloured-dungeon-life" title="rose-coloured-dungeon-life game page/download"><img src="img/lowercase_games/rcdl.gif" alt="Rose-Coloured Dungeon Life game screenshot"></a>
-					<a href="https://lowercase-games.itch.io/dipsomaniac" title="dipsomaniac game page/download"><img src="img/lowercase_games/dipso.png" alt="Dipsomaniac game screenshot"></a>
-					<a href="https://www.designbyhumans.com/shop/Hisfantor/" title="lowercase games merch store"><img src="img/lowercase_games/merch.png" alt="designbyhumans lowercase games merch store screenshot"></a>
-					<a href="https://lowercase-games.itch.io/im-no-shut-in" title="im-no-shut-in game page/download"><img src="img/lowercase_games/imno.png" alt="I'm no shut-in game screenshot"></a>
-					<a href="https://twitter.com/lowercase_games" title="lowercase games twitter"><img src="img/lowercase_games/twitter.png" alt="lowercase games twitter screenshot"></a>
-					<a href="https://lowercase-games.itch.io/metamorph" title="Metamorph game page/download"><img src="img/lowercase_games/meta.png" alt="Metamorph game screenshot"></a>
+					<a href="https://lowercase-games.itch.io/dipsomaniac" title="dipsomaniac game page/download"><img src="img/lowercase_games/dipso.WebP" alt="Dipsomaniac game screenshot"></a>
+					<a href="https://www.designbyhumans.com/shop/Hisfantor/" title="lowercase games merch store"><img src="img/lowercase_games/merch.WebP" alt="designbyhumans lowercase games merch store screenshot"></a>
+					<a href="https://lowercase-games.itch.io/im-no-shut-in" title="im-no-shut-in game page/download"><img src="img/lowercase_games/imno.WebP" alt="I'm no shut-in game screenshot"></a>
+					<a href="https://twitter.com/lowercase_games" title="lowercase games twitter"><img src="img/lowercase_games/twitter.WebP" alt="lowercase games twitter screenshot"></a>
+					<a href="https://lowercase-games.itch.io/metamorph" title="Metamorph game page/download"><img src="img/lowercase_games/meta.WebP" alt="Metamorph game screenshot"></a>
 				</div>
 			</article>
 			<article id="lists">
@@ -212,10 +212,10 @@
 				used for keycap reference. I'm still working on keyboards, writing up information and building new boards as I go.
 			</div>
 			<div class="gallery">
-				<img src="https://i.imgur.com/OuWnqxQ.jpg" alt="r/place mechanical keyboard">
-				<img src="https://i.imgur.com/U2vcaJp.jpg" alt="40num+ first prototype mechanical keyboard">
-				<img src="https://i.imgur.com/K5ZM3Vo.jpg" alt="40num+ layouts">
-				<img src="https://i.imgur.com/8uL15Pt.png" alt="most common 40% keyboard layouts">
+				<img src="img/mk/place.WebP" alt="r/place mechanical keyboard">
+				<img src="img/mk/40numplus.WebP" alt="40num+ first prototype mechanical keyboard">
+				<img src="img/mk/40percentboards.WebP" alt="most common 40% keyboard layouts">
+				<img src="img/mk/40numpluslayout.WebP" alt="40num+ layouts">
 			</div>
 		</article>
 		
@@ -240,7 +240,7 @@
 			</div>
 			<div class="gallery">
 				<img src="https://i.imgur.com/L1bIcrm.gif" alt="the gif that brought me to the front page of reddit">
-				<img src="img/cube.png" alt="r/place companion cube I've built">
+				<img src="img/cube.WebP" alt="r/place companion cube I've built">
 			</div>
 		</article-->
 	</section>
