--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					</ul>
 				</div>
 				<div class="gallery">
-					<iframe id="iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTjEfm-VV6Xy6i35mwfO94e9q3LmhtVZPH28LbrGWT4PeINa6by9ssG6vvf35zYlXFkM_PUbCvdvGPO/pubhtml?gid=0&single=true"></iframe>
+					<iframe id="iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTjEfm-VV6Xy6i35mwfO94e9q3LmhtVZPH28LbrGWT4PeINa6by9ssG6vvf35zYlXFkM_PUbCvdvGPO/pubhtml?gid=0&single=true" title="game of thrones podcasts table"></iframe>
 				</div>
 			</article>
 			<article id="mk">
