--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 					the tools or a big budget. So my plan is to share that it's possible anyway, to cook a wide variety 
 					of simple and healthy meals for yourself. It's not even as hard as many might think.
 					So I created an <a href="https://www.instagram.com/hft_studentcooking" title="hft_studentcooking instagram">Instagram</a> where I post the meals as soon as
-					they are cooked. In addition to that I set up a hugo blog on <a href="/studentcooking" title="my studentcooking blog">here</a>
-					where you can find some of the "recipees" I have cooked. I keep the instructions as minimal as possible since I believe that you learn the most by trying yourself.
+					they are cooked. In addition to that I set up a hugo blog on <a href="/studentcooking" title="my studentcooking blog">hisfantor.com/studentcooking</a>
+					, where you can find some of the "recipees" I have cooked. I keep the instructions as minimal as possible since I believe that you learn the most by trying yourself.
 				</div>
 				<div class="gallery">
 					<a href="/studentcooking" title="my studentcooking blog"><img src="img/studentcooking/wide1.WebP" alt="stundetcooking website screenshot"></a>
@@ -203,7 +203,7 @@
 				<h2>Mechanical Keyboards</h2>
 				<div class="description">
 				On the 24.8.2016 started my journey down the rabbit hole which is r/MechanicalKeyboard.
-				I posted a layout idea of an 40% layout with additional numpad. If you follow the comment thread <a href="https://old.reddit.com/r/MechanicalKeyboards/comments/4zdnpk/an_idea_of_a_40_board_with_numpad/" title="reddit post about my first keyboard design">here</a>
+				I posted a layout idea of an 40% layout with additional numpad. If you follow <a href="https://old.reddit.com/r/MechanicalKeyboards/comments/4zdnpk/an_idea_of_a_40_board_with_numpad/" title="reddit post about my first keyboard design">this comment thread</a>
 				you'll witness how a reddit user in the states was so intrigued by my design that within hours of my post he laser cut 
 				the plate and case and built up a prototype which arrived a few weeks later at my home and became my first mk. <br> 
 				The second one I built was the famous planck which I outfitted with a USB hub so I can add a mouse dongle and a micro SD card
