--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<meta property="og:type" content="article" /> 
 	<meta property="og:title" content="Hisfantor.com" />
 	<meta property="og:description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff." />
-	<meta property="og:image" content="img/pagescreenshot.png" />
+	<meta property="og:image" content="img/pagescreenshot.WebP" />
 	<meta property="og:url" content="https://www.Hisfantor.com" />
 	<meta property="og:site_name" content="Hisfantor.com" />
 
 	<meta name="twitter:title" content="Hisfantor.com">
 	<meta name="twitter:description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff.">
-	<meta name="twitter:image" content="img/pagescreenshot.png">
+	<meta name="twitter:image" content="img/pagescreenshot.WebP">
 	<meta name="twitter:site" content="@hisfantor">
 	<meta name="twitter:creator" content="@hisfantor">
 
