--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 	<meta name="description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff.">
 	<meta name="robots" charset="index,follow">
 
+	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="article" /> 
 	<meta property="og:title" content="Hisfantor.com" />
 	<meta property="og:description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff." />
-	<meta property="og:image" content="img/pagescreenshot.WebP" />
+	<meta property="og:image" content="https://hisfantor.com/img/pagescreenshot.WebP" />
+	<meta property="og:image:secure_url" content="https://hisfantor.com/img/pagescreenshot.WebP" />
+	<meta property="og:image:width" content="1907" />
+	<meta property="og:image:height" content="1078" />
 	<meta property="og:url" content="https://www.Hisfantor.com" />
 	<meta property="og:site_name" content="Hisfantor.com" />
 
+	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Hisfantor.com">
 	<meta name="twitter:description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff.">
-	<meta name="twitter:image" content="img/pagescreenshot.WebP">
+	<meta name="twitter:image" content="https://hisfantor.com/img/pagescreenshot.WebP">
 	<meta name="twitter:site" content="@hisfantor">
 	<meta name="twitter:creator" content="@hisfantor">
 
