--- a/index.html
+++ b/index.html
@@ -4,31 +4,30 @@
 	<meta charset="utf-8">
 	<meta name="p:domain_verify" content="d29788a4ca9610493c561297c0ae83b6"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="title" content="Hisfantor">
+	<meta name="title" content="Hisfantor's Homepage">
 	<meta name="description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff.">
 	<meta name="robots" charset="index,follow">
 
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="article" /> 
-	<meta property="og:title" content="Hisfantor.com" />
+	<meta property="og:title" content="Hisfantor's Homepage" />
 	<meta property="og:description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff." />
-	<meta property="og:image" content="https://hisfantor.com/img/pagescreenshot.WebP" />
-	<meta property="og:image:secure_url" content="https://hisfantor.com/img/pagescreenshot.WebP" />
+	<meta property="og:image" content="https://hisfantor.com/img/pagescreenshot.jpg" />
+	<meta property="og:image:secure_url" content="https://hisfantor.com/img/pagescreenshot.jpg" />
 	<meta property="og:image:width" content="1907" />
 	<meta property="og:image:height" content="1078" />
 	<meta property="og:url" content="https://www.Hisfantor.com" />
-	<meta property="og:site_name" content="Hisfantor.com" />
 
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Hisfantor.com">
+	<meta name="twitter:title" content="Hisfantor's Homepage">
 	<meta name="twitter:description" content="I'm Niclas aka Hisfantor and that's my home page. Discover the projects I am working on, which span a wide variety of topics including Linux, Mechanical Keyboards, Cooking, Games, Movies and other nerdy stuff.">
-	<meta name="twitter:image" content="https://hisfantor.com/img/pagescreenshot.WebP">
+	<meta name="twitter:image" content="https://hisfantor.com/img/pagescreenshot.jpg">
 	<meta name="twitter:site" content="@hisfantor">
 	<meta name="twitter:creator" content="@hisfantor">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
-	<title>Hisfantor</title>
+	<title>Hisfantor's Homepage</title>
 	<link rel="shortcut icon" href="icons/snoo.ico">
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif+Caption|Roboto|Roboto+Mono&display=swap" rel="stylesheet">
