--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 			</div>
 			<div id="H-middle">
 				<p>
-					<span>About:</span> I'm Niclas from Germany. 20 years old studying mechanical engineering and trying to create in my
-					free time. Here you'll find an overview of my projects past and present. It's all over the place 
+					<span>About:</span> I'm Niclas from Germany, a mechanical engineering student. 
+					Here you'll find an overview of my projects past and present. It's all over the place 
 					in terms of interests and subjects. Things I'm interested in include: tech, engineering, cooking, movies, 
 					video games, mechanical keyboards, cars, furniture, Linux and much more
 				</p>
