hide mail, it's not working

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 			<a href="https://twitter.com/Hisfantor" title="twitter">twitter </a>
 			<a href="https://www.reddit.com/user/Hisfantor/" title="reddit">reddit </a>
 			<a href="https://www.instagram.com/Hisfantor/" title="Instagram">instagram</a>
-			<br><a href = "mailto:niclas@hisfantor.com">niclas@hisfantor.com</a>
+			<!--br><a href = "mailto:niclas@hisfantor.com">niclas@hisfantor.com</a-->
 			<br>Discord: Hisfantor#1945
 			<br><a href="icons.html">icons cc links</a>
 	</footer>
